fix styling on iPhone

--- a/landingpage/gitreleases.css
+++ b/landingpage/gitreleases.css
@@ -45,6 +45,9 @@
 .wb-bw {
   word-break: break-word;
 }
+.input-repo, .input-submit {
+  height: 40px;
+}
 
 @media screen and (min-width: 120em) {
   .w-50-h {
